[package]
name = "esdl"
version = "0.4.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Event-sourcing Schema Definition Language parser and code generator"
repository = "https://github.com/thalo-rs/esdl"
license = "MIT OR Apache-2.0"
keywords = ["schema", "esdl", "codegen", "event-sourcing", "cqrs"]
categories = [
  "compilers",
  "data-structures",
  "development-tools::build-utils",
  "parsing",
  "encoding",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
heck = { version = "0.4", optional = true }
nom = { version = "7.1", features = ["alloc"] }
nom-supreme = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[features]
default = []
codegen-rust = ["heck"]
codegen-typescript = []
wasm = []
