[package]
name = "esdl"
version = "0.5.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Event-sourcing Schema Definition Language parser and code generator"
repository = "https://github.com/thalo-rs/esdl"
license = "MIT OR Apache-2.0"
keywords = ["schema", "esdl", "codegen", "event-sourcing", "cqrs"]
categories = [
  "compilers",
  "data-structures",
  "development-tools::build-utils",
  "parsing",
  "encoding",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
handlebars = { version = "4.2", optional = true }
heck = { version = "0.4", optional = true }
nom = { version = "7.1", features = ["alloc"] }
nom-supreme = "0.8"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
wit-parser = { git = "https://github.com/bytecodealliance/wit-bindgen", optional = true }
wit-bindgen-gen-core = { git = "https://github.com/bytecodealliance/wit-bindgen", optional = true }
wit-bindgen-gen-rust-wasm = { git = "https://github.com/bytecodealliance/wit-bindgen", optional = true }

[features]
default = []
codegen-rust = ["heck"]
codegen-rust-wasm = [
  "heck",
  "handlebars",
  "wit-parser",
  "wit-bindgen-gen-core",
  "wit-bindgen-gen-rust-wasm",
]
codegen-typescript = []
