[package]
name = "esdl"
version = "0.5.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Event-sourcing Schema Definition Language parser"
repository = "https://github.com/thalo-rs/esdl"
license = "MIT OR Apache-2.0"
keywords = ["schema", "esdl", "codegen", "event-sourcing", "cqrs"]
categories = [
  "compilers",
  "data-structures",
  "development-tools::build-utils",
  "parsing",
  "encoding",
]

[dependencies]
nom = { version = "7.1", features = ["alloc"] }
nom-supreme = "0.8"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
